force-app/main/default/objects/Case/fields/CRM_Glabal_RelatedRequest__c.field-meta.xml
<CustomField>
    <fullName>CRM_Glabal_RelatedRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases (Related Request)</relationshipLabel>
    <relationshipName>CasesToRequest</relationshipName>
    <type>Lookup</type>
</CustomField>