force-app/main/default/objects/Case/fields/CRM_Global_AgentCode__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_AgentCode__c</fullName>
    <formula>Account.CRM_Global_AgentCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Code</label>
    <type>Text</type>
</CustomField>