force-app/main/default/objects/Case/fields/CRM_Global_Amount__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>