force-app/main/default/objects/Case/fields/CRM_Global_AssignedDepartment_2__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_AssignedDepartment_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Assigned Department 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>