force-app/main/default/objects/Case/fields/CRM_Global_AutoComplete__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_AutoComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Complete</label>
    <type>Checkbox</type>
</CustomField>