force-app/main/default/objects/Case/fields/CRM_Global_Call_DateTime__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Call_DateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Date Time</label>
    <type>DateTime</type>
</CustomField>