force-app/main/default/objects/Case/fields/CRM_Global_CancelReason__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_CancelReason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancel Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>