force-app/main/default/objects/Case/fields/CRM_Global_Case_Recipient_1_Id__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Case_Recipient_1_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Recipient 1 (Id)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>