force-app/main/default/objects/Case/fields/CRM_Global_Case_Recipient_1_Text__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Case_Recipient_1_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Recipient 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>