force-app/main/default/objects/Case/fields/CRM_Global_CaseActive__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_CaseActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Case Active</label>
    <type>Checkbox</type>
</CustomField>