force-app/main/default/objects/Case/fields/CRM_Global_CaseAge__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_CaseAge__c</fullName>
    <formula>IF( 
  NOT(ISBLANK(CRM_Global_TAT_StartTime__c)), 
  TRIM( 
    TEXT( FLOOR( (NOW() - CRM_Global_TAT_StartTime__c) * 24 ) ) &amp; &quot;h &quot; &amp; 
    TEXT( ROUND( MOD( (NOW() - CRM_Global_TAT_StartTime__c) * 1440, 60 ), 0 ) ) &amp; &quot;m&quot; 
  ), 
  &quot;&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age</label>
    <type>Text</type>
</CustomField>