force-app/main/default/objects/Case/fields/CRM_Global_CaseBackground__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_CaseBackground__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Background</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>