force-app/main/default/objects/Case/fields/CRM_Global_CaseOwnerforDevelopment__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_CaseOwnerforDevelopment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Owner (for Development)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesToUser</relationshipName>
    <type>Lookup</type>
</CustomField>