force-app/main/default/objects/Case/fields/CRM_Global_CaseReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_CaseReceivedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Received Date</label>
    <type>Date</type>
</CustomField>