force-app/main/default/objects/Case/fields/CRM_Global_CaseReply_1__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_CaseReply_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Case Reply 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>