force-app/main/default/objects/Case/fields/CRM_Global_ChannelOthers__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_ChannelOthers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel (Others)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>