force-app/main/default/objects/Case/fields/CRM_Global_ClientCode__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_ClientCode__c</fullName>
    <formula>Account.FinServ__CustomerID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Code</label>
    <type>Text</type>
</CustomField>