force-app/main/default/objects/Case/fields/CRM_Global_CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_CompletionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>