force-app/main/default/objects/Case/fields/CRM_Global_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_CreatedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>