force-app/main/default/objects/Case/fields/CRM_Global_DateOfReceipt__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_DateOfReceipt__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of Receipt</label>
    <type>DateTime</type>
</CustomField>