force-app/main/default/objects/Case/fields/CRM_Global_DateRequestFollowUp__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_DateRequestFollowUp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Request Follow Up</label>
    <type>DateTime</type>
</CustomField>