force-app/main/default/objects/Case/fields/CRM_Global_Deadline__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dead line</label>
    <type>DateTime</type>
</CustomField>