force-app/main/default/objects/Case/fields/CRM_Global_DeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_DeliveryMethod__c</fullName>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Agent Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>