force-app/main/default/objects/Case/fields/CRM_Global_DocumentType__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_DocumentType__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>