force-app/main/default/objects/Case/fields/CRM_Global_Email__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email</label>
    <type>Checkbox</type>
</CustomField>