force-app/main/default/objects/Case/fields/CRM_Global_EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_EmailAddress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>