force-app/main/default/objects/Case/fields/CRM_Global_EndTime__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_EndTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>