force-app/main/default/objects/Case/fields/CRM_Global_EnquirerName__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_EnquirerName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enquirer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>