force-app/main/default/objects/Case/fields/CRM_Global_EnquiryCase_Status__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_EnquiryCase_Status__c</fullName>
    <label>Enquiry Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>