force-app/main/default/objects/Case/fields/CRM_Global_EnquiryCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_EnquiryCaseNumber__c</fullName>
    <displayFormat>ENQ-{YYYYMM}-{0000}</displayFormat>
    <label>Case Number</label>
    <type>AutoNumber</type>
</CustomField>