force-app/main/default/objects/Case/fields/CRM_Global_EnquiryType__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_EnquiryType__c</fullName>
    <label>Enquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CL</fullName>
                <label>Claims</label>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>UW</fullName>
                <label>Underwriting</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>Others</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>