force-app/main/default/objects/Case/fields/CRM_Global_Escalated1__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Escalated1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated(1)</label>
    <type>Checkbox</type>
</CustomField>