force-app/main/default/objects/Case/fields/CRM_Global_Escalated2__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Escalated2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalated(2)</label>
    <type>Checkbox</type>
</CustomField>