force-app/main/default/objects/Case/fields/CRM_Global_FinalResult__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_FinalResult__c</fullName>
    <label>Final Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SUC - Clear &amp; no f/u</fullName>
            </value>
            <value>
                <fullName>SUC - CFI &amp; no f/u</fullName>
            </value>
            <value>
                <fullName>PEND - Uncertain replies</fullName>
            </value>
            <value>
                <fullName>PEND - Reschedule</fullName>
            </value>
            <value>
                <fullName>FAIL - Refuse/unwilling to continue</fullName>
            </value>
            <value>
                <fullName>FAIL - Uncertain replies</fullName>
            </value>
            <value>
                <fullName>FAIL - Unreached</fullName>
            </value>
            <value>
                <fullName>FAIL - Invalid no.</fullName>
            </value>
            <value>
                <fullName>OTH - No Need to call</fullName>
            </value>
            <value>
                <fullName>OTH - GHO VC Letter</fullName>
            </value>
            <value>
                <fullName>OTH - COM PSC SUSP Simple</fullName>
            </value>
            <value>
                <fullName>OTH - COM PSC SUSP Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>