force-app/main/default/objects/Case/fields/CRM_Global_FirstContactResolution__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_FirstContactResolution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Contact Resolution</label>
    <type>Checkbox</type>
</CustomField>