force-app/main/default/objects/Case/fields/CRM_Global_FollowUpRequestNewRequest__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_FollowUpRequestNewRequest__c</fullName>
    <label>Follow up request / new request?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>