force-app/main/default/objects/Case/fields/CRM_Global_Form__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form</label>
    <type>Checkbox</type>
</CustomField>