force-app/main/default/objects/Case/fields/CRM_Global_ForwardedTheLetterTo__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_ForwardedTheLetterTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forwarded the Letter To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LetterCases</relationshipName>
    <type>Lookup</type>
</CustomField>