force-app/main/default/objects/Case/fields/CRM_Global_FurtherFollowUpNeeded__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_FurtherFollowUpNeeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Further FollowUp Needed</label>
    <type>Checkbox</type>
</CustomField>