force-app/main/default/objects/Case/fields/CRM_Global_HandingTime__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_HandingTime__c</fullName>
    <label>Handing Time</label>
    <type>Time</type>
</CustomField>