force-app/main/default/objects/Case/fields/CRM_Global_InquirerIdentity__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_InquirerIdentity__c</fullName>
    <label>Inquirer Identity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Policyowner</fullName>
            </value>
            <value>
                <fullName>Beneficiary</fullName>
            </value>
            <value>
                <fullName>Life Assured</fullName>
            </value>
            <value>
                <fullName>Third Party</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>