force-app/main/default/objects/Case/fields/CRM_Global_InquirerIdentityOther__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_InquirerIdentityOther__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inquirer Identity (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>