force-app/main/default/objects/Case/fields/CRM_Global_InsurancePolicyparticipant__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_InsurancePolicyparticipant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy Participant</label>
    <referenceTo>InsurancePolicyParticipant</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>