force-app/main/default/objects/Case/fields/CRM_Global_InvestigationResult__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_InvestigationResult__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Investigation Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>