force-app/main/default/objects/Case/fields/CRM_Global_IsFinalWrapUp__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_IsFinalWrapUp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Final Wrap Up</label>
    <type>Checkbox</type>
</CustomField>