force-app/main/default/objects/Case/fields/CRM_Global_IVR_Auth__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_IVR_Auth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IVR Auth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>