force-app/main/default/objects/Case/fields/CRM_Global_LastUpdated__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_LastUpdated__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>