force-app/main/default/objects/Case/fields/CRM_Global_LastWrapUpDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_LastWrapUpDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Wrap Up Date</label>
    <type>DateTime</type>
</CustomField>