force-app/main/default/objects/Case/fields/CRM_Global_Letter__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Letter</label>
    <type>Checkbox</type>
</CustomField>