force-app/main/default/objects/Case/fields/CRM_Global_LetterLanguage__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_LetterLanguage__c</fullName>
    <label>Letter Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>