force-app/main/default/objects/Case/fields/CRM_Global_LetterReceiveDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_LetterReceiveDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Letter Receive Date</label>
    <type>Date</type>
</CustomField>