force-app/main/default/objects/Case/fields/CRM_Global_LetterType__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_LetterType__c</fullName>
    <label>Letter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Non-standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>