force-app/main/default/objects/Case/fields/CRM_Global_LocationOfTheCentre__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_LocationOfTheCentre__c</fullName>
    <label>Location of The Centre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Walk-In (PT)</fullName>
            </value>
            <value>
                <fullName>Walk-In (PT-VIP)</fullName>
            </value>
            <value>
                <fullName>Walk-In (PTB)</fullName>
            </value>
            <value>
                <fullName>Walk-In (LG2)</fullName>
            </value>
            <value>
                <fullName>Walk-In (LG5)</fullName>
            </value>
            <value>
                <fullName>Walk-In (MC1)</fullName>
            </value>
            <value>
                <fullName>Walk-In (MP1)</fullName>
            </value>
            <value>
                <fullName>Walk-In (HPB)</fullName>
            </value>
            <value>
                <fullName>Walk-In (MC2)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>