force-app/main/default/objects/Case/fields/CRM_Global_LogNumber__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_LogNumber__c</fullName>
    <label>Log Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>