force-app/main/default/objects/Case/fields/CRM_Global_NameofAssured__c.field-meta.xml
<CustomField>
    <fullName>CRM_Global_NameofAssured__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name of Assured</label>
    <length>255</length>
    <type>Text</type>
</CustomField>